419333 treat // as an alias in path